force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>An address linked to the account</description>
    <label>Address</label>
    <nameField>
        <displayFormat>a{0000000}</displayFormat>
        <label>Address name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>