force-app/main/default/objects/Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An internal field used to link this address info to an Account.</description>
    <inlineHelpText>An internal field used to link this address info to an Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Address</relationshipName>
    <type>Lookup</type>
</CustomField>