force-app/main/default/objects/Address__c/fields/Account_address_rating__c.field-meta.xml
<CustomField>
    <fullName>Account_address_rating__c</fullName>
    <description>Ranking of address for export to SF/AQ based on account groupings.</description>
    <label>Account address rating</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>