force-app/main/default/objects/Address__c/fields/AccountExternalIDLinkField__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalIDLinkField__c</fullName>
    <description>Use this field during a conversion by inserting the Account External ID value from the Account in order to link this address to that Account.</description>
    <inlineHelpText>Use this field during a conversion by inserting the Account External ID value from the Account in order to link this address to that Account.</inlineHelpText>
    <label>Account ExternalID Link Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>