force-app/main/default/objects/Address__c/fields/Address_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_External_ID__c</fullName>
    <label>Address External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>