force-app/main/default/objects/Address__c/fields/Address_w_confidential__c.field-meta.xml
<CustomField>
    <fullName>Address_w_confidential__c</fullName>
    <description>Combined address except that Street is hidden for confidential accounts</description>
    <formula>IF( Account__r.Keep_confidential__c &amp;&amp; NOT(ISBLANK(Street__c)), &quot;[Street address CONFIDENTIAL]&quot;, Street__c) &amp;
        IF(NOT(ISBLANK(Street__c)), &apos;, &apos;, &apos;&apos;) &amp; 
        Street__c &amp;
        IF(NOT(ISBLANK(City__c)), &apos;, &apos;, &apos;&apos;) &amp; 
        City__c &amp;
        IF(NOT(ISBLANK(Province__c)), &apos;, &apos;, &apos;&apos;) &amp; 
        Province__c &amp;
        &apos; &apos; &amp; PostalCode__c &amp; &apos; &apos; &amp; Country__c</formula>
    <inlineHelpText>Combined address except that Street is hidden for confidential accounts</inlineHelpText>
    <label>Address (w/ confidential)</label>
    <type>Text</type>
</CustomField>