force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city name related to the address.  This name can be the preferred city name or an acceptable city name. Free text of up to 50 characters.</description>
    <inlineHelpText>The City portion of the address.  Free text of up to 50 characters.</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>