force-app/main/default/objects/Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A system field used to link the Address to a Contact.</description>
    <inlineHelpText>A system field used to link the Address to a Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>