force-app/main/default/objects/Address__c/fields/ContactExternalIDLinkField__c.field-meta.xml
<CustomField>
    <fullName>ContactExternalIDLinkField__c</fullName>
    <description>Use this field during a conversion by inserting the Account External ID value from the Contact in order to link this address to that Contact.</description>
    <inlineHelpText>Use this field during a conversion by inserting the Account External ID value from the Contact in order to link this address to that Contact.</inlineHelpText>
    <label>Contact External ID Link Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>