force-app/main/default/objects/Address__c/fields/Full_address__c.field-meta.xml
<CustomField>
    <fullName>Full_address__c</fullName>
    <description>System-generated, using individual pieces of the address record.  This field contains the formatted address, which can be used for mailing purposes.</description>
    <formula>Street__c &amp;
IF(NOT(ISBLANK(Street__c)), &apos;, &apos;, &apos;&apos;)
&amp; City__c &amp;
IF(NOT(ISBLANK(City__c)), &apos;, &apos;, &apos;&apos;)
&amp; State__c &amp; &apos;  &apos; &amp;  PostalCode__c &amp; &apos;    &apos; &amp;  Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System-generated, using individual pieces of the address record.  This field contains the formatted address, which can be used for mailing purposes.</inlineHelpText>
    <label>Full address</label>
    <type>Text</type>
</CustomField>