force-app/main/default/objects/Address__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if this address is being used as account address.</description>
    <inlineHelpText>Checks if this address is being used as account address.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>