force-app/main/default/objects/Address__c/fields/IsActiveAddress__c.field-meta.xml
<CustomField>
    <fullName>IsActiveAddress__c</fullName>
    <formula>IF ( IsActive__c = TRUE, &quot;YES&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that this alternate address is being used as the Current Mailing Address.</inlineHelpText>
    <label>Is Active Address:</label>
    <type>Text</type>
</CustomField>