force-app/main/default/objects/Address__c/fields/IsCurrentActiveAddress__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentActiveAddress__c</fullName>
    <formula>IF( ISBLANK(Contact__c), IF( Account__r.LinkedAddress__c =  Id , &quot;YES&quot;, &quot;No&quot;), IF ( Contact__r.LinkedAddress__c = Id , &quot;YES&quot;, &quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that this address is currently the Active Address.</inlineHelpText>
    <label>Is Current Active Address:</label>
    <type>Text</type>
</CustomField>