force-app/main/default/objects/Address__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Specifies the north south position of a point on the Earth&apos;s surface.</description>
    <inlineHelpText>This field can be automatically populated by various address matching services.</inlineHelpText>
    <label>Latitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>