force-app/main/default/objects/Address__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <description>City, State/Province, Postal Code and Country (if not USA) combined onto one line for use in reports, screen display, and mail merges. This field, along with the Street field, is for use in mail merges.</description>
    <formula>City__c &amp;
        IF(NOT(ISBLANK(State__c)), &apos;, &apos; &amp; State__c, &apos;&apos;) &amp;
        IF(NOT(ISBLANK(Province__c)), &apos;, &apos; &amp; Province__c, &apos;&apos;) &amp;
        &apos; &apos; &amp; PostalCode__c &amp; BR() &amp;
  Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>City, State/Province, Postal Code and Country (if not USA) combined onto one line for use in reports, screen display, and mail merges. This field, along with the Street field, is for use in mail merges.</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>