force-app/main/default/objects/Address__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Specifies the east west position of a point on the Earth&apos;s surface.</description>
    <inlineHelpText>This field can be automatically populated by various address matching services.</inlineHelpText>
    <label>Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>