force-app/main/default/objects/Address__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>May be used to describe special characteristics of, or information about this address. For example, special directions may be needed to locate the location for a personal visit.  It might also describe funds on the use of this address.  Up to 255 characters.</description>
    <inlineHelpText>May be used to describe special characteristics of, or information about this address. For example, special directions may be needed to locate the location for a personal visit.  It might also describe funds on the use of this address.</inlineHelpText>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>