force-app/main/default/objects/Address__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>The postal code for the address. Free text of up to 20 characters.</description>
    <inlineHelpText>Postal Codes of up to 40 characters can be entered.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>