force-app/main/default/objects/Address__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province part of the address, usually only filled in when different from State</description>
    <inlineHelpText>Province part of the address, usually only filled in when different from State</inlineHelpText>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>