force-app/main/default/objects/Address__c/fields/Rank_number__c.field-meta.xml
<CustomField>
    <fullName>Rank_number__c</fullName>
    <description>Rank of this address relative to other addresses linked to constituent in FM database.</description>
    <inlineHelpText>Rank of this address relative to other addresses linked to constituent in FM database.</inlineHelpText>
    <label>Rank number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>