force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The State for the address. Free text of up to 80 characters.</description>
    <inlineHelpText>The State for this address information.</inlineHelpText>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>