force-app/main/default/objects/Address__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Status is used to indicate whether this address is currently thought to be valid for use in mailings.</description>
    <inlineHelpText>The Status is used to indicate whether this address is currently thought to be valid for use in mailings.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Omit from Mailings</fullName>
            </value>
            <value>
                <fullName>Returned by Post Office</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Phone Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>