force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Multiple street lines can be entered by simply hitting enter after each line.  A total of 255 characters can be entered.  This field, along with the Locality field, is for use in mail merges.</description>
    <inlineHelpText>Multiple street lines can be entered by simply hitting enter after each line.  A total of 255 characters can be entered.  This field, along with the Locality field, is for use in mail merges.</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>