force-app/main/default/objects/Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The Type describes the nature of this address, e.g. Home, Business, Vacation, Other, etc.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Foundation/Fund</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>