force-app/main/default/objects/Address__c/fields/UseAsAccountMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>UseAsAccountMailingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this address will be used as the Mailing Address for the Account to which it is associated.</inlineHelpText>
    <label>Use As Account Mailing Address</label>
    <type>Checkbox</type>
</CustomField>