force-app/main/default/objects/Address__c/fields/UseAsContactMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>UseAsContactMailingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this address will be used as the Mailing Address for the Contact with whom it is associated.</inlineHelpText>
    <label>Use as Contact Mailing Address</label>
    <type>Checkbox</type>
</CustomField>