force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Full_address__c</columns>
    <columns>Address_External_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>